--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,5 +9,23 @@ h1 {
 
 .walt {
     text-align: center;
-    
+}
+
+.tabelaEditavel {
+        border: solid 1px;
+        width: 100%;
+}
+
+.tabelaEditavel td {
+    border:solid 1px;
+}
+
+.tabelaEditavel .celulaEmEdicao {
+    padding: 0;
+}
+
+.tabelaEditavel .celulaEmEdicao input[type=text]{
+    width:100%;
+    border:0;
+    background-color:rgb(255,253,210);
 }
