--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,20 +12,11 @@ h1 {
 }
 
 .tabelaEditavel {
+        text-align: center;
         border: solid 1px;
         width: 100%;
 }
 
 .tabelaEditavel td {
     border:solid 1px;
-}
-
-.tabelaEditavel .celulaEmEdicao {
-    padding: 0;
-}
-
-.tabelaEditavel .celulaEmEdicao input[type=text]{
-    width:100%;
-    border:0;
-    background-color:rgb(255,253,210);
 }
