--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,42 +1,90 @@
 body {
-    background-color: #107d2d;
+  background-color: #107d2d;
+	margin: 0;
 }
 
 h1 {
-    text-align: center;
-    color: rgb(0, 0, 0);
+  text-align: center;
+  color: rgb(0, 0, 0);
+  margin-top: 100px;
+}
+
+main{
+	max-width: 60%;
+	margin-right: auto;
+	margin-left: auto;
+	background-color: darkgreen;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+nav{
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+  background-color: rgb(224, 224, 131);
+  border: solid;
+  padding: 2px;
+  border-top-width: 0px;
+  border-right-width: 0px;
+	border-left-width: 0px;
+  border-bottom-width: 5px;
+  box-shadow: 0px 0px 30px rgb(231, 96, 96);
+}
+
+a:link, a:visited {
+	text-decoration: none;
+	color: black;
+}
+
+nav ul li{
+  display: inline-block;
+  margin-left: 60px;
+  border: 2px solid white;
+  padding: 10px;
+  border-radius: 10px;
+  border-top-width: 0px;
+  border-right-width: 5px;
+  border-bottom-width: 5px;
+  background-color: rgb(51, 172, 51); 
+	box-shadow: 0px 0px 10px black;
+}    
+
+ul li:hover{
+  background-color: darkgray;
 }
 
 #main-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
 
 .left {
-    text-align: left;
+  text-align: left;
 }
 
 .right {
-    text-align: right;
+  text-align: right;
 }
 
 .margin {
-    margin: 0 50px;
+  margin: 0 50px;
 }
 
 .tabelaEditavel {
-    text-align: center;
-    border: solid 1px;
-    width: 100%;
+  text-align: center;
+  border: solid 1px;
+  width: 100%;
 }
 
 .tabelaEditavel td {
-    border:solid 1px;
+  border:solid 1px;
 }
