--- a/css/pag3.css
+++ b/css/pag3.css
@@ -1,8 +1,12 @@
 body {
-  background-color: darkgreen;
+  background-color: rgb(7, 102, 7);
 	margin: 0 30px;
   line-height: 30px;
   font-family: sans-serif;
+}
+
+h1 {
+  text-align: center;
 }
 
 main{
@@ -49,4 +53,10 @@ nav ul li{
 
 ul li:hover{
   background-color: darkgray;
+}
+
+.text1{
+  text-align: justify;
+  background-color:wheat;
+  padding: 15px;
 }
