--- a/css/pag8.css
+++ b/css/pag8.css
@@ -17,6 +17,11 @@ main {
       border-radius: 10px;
       padding: 10px;
 }
+
+.center {
+  text-align: center;
+  position: relative;
+}
   
 .medicao {
     margin-top: 110px;
@@ -52,4 +57,10 @@ ul li:hover {
 a:link, a:visited {
 	text-decoration: none;
 	color: black;
+}
+
+.text1{
+  text-align: justify;
+  background-color:wheat;
+  padding: 15px;
 }
