--- a/css/pag2.css
+++ b/css/pag2.css
@@ -43,3 +43,12 @@ nav ul li{
 ul li:hover{
   background-color: darkgray;
 }
+
+#main-footer {
+	text-align: center;
+	margin-top: 50px;
+	color: rgb(5, 5, 5);
+	max-width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+}
