--- a/css/pag3.css
+++ b/css/pag3.css
@@ -60,3 +60,12 @@ ul li:hover{
   background-color:wheat;
   padding: 15px;
 }
+
+#main-footer {
+	text-align: center;
+	margin-top: 50px;
+	color: rgb(5, 5, 5);
+	max-width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+}
