--- a/css/pag4.css
+++ b/css/pag4.css
@@ -64,3 +64,13 @@ ul li:hover {
 th {
   background-color: wheat;
 }
+
+#main-footer {
+	text-align: center;
+	margin-top: 50px;
+	color: rgb(5, 5, 5);
+	max-width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
