--- a/css/pag5.css
+++ b/css/pag5.css
@@ -66,10 +66,18 @@ a:link, a:visited {
     text-align: right;
 }
   
-
-
 .text1{
     text-align: justify;
     background-color:wheat;
     padding: 15px;
 }
+
+#main-footer {
+	text-align: center;
+	margin-top: 50px;
+	color: rgb(5, 5, 5);
+	max-width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
