--- a/css/pag6.css
+++ b/css/pag6.css
@@ -8,7 +8,12 @@ h1 {
     text-align: center;
     color: rgb(0, 0, 0);
     margin-top: 50;
-}  
+}
+
+h2 {
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
 main {
       max-width: 100%;
       margin-right: auto;
@@ -66,4 +71,17 @@ a:link, a:visited {
     text-align: justify;
     background-color:wheat;
     padding: 15px;
+}
+
+#main-footer {
+	text-align: center;
+	margin-top: 50px;
+	color: rgb(5, 5, 5);
+	max-width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+h3 {
+  text-align: center;
 }
