--- a/css/pag7.css
+++ b/css/pag7.css
@@ -64,4 +64,14 @@ ul li:hover {
 th {
     background-color: wheat;
 }
+
+#main-footer {
+	text-align: center;
+	margin-top: 50px;
+	color: rgb(5, 5, 5);
+	max-width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
   
